# photometoria

./: .gitignore  CLAUDE.md  LICENSE  README.md
api/: CLAUDE.md  Cargo.toml
api/src/: main.rs
api/src/routes/: mod.rs
scripts/: CLAUDE.md  requirements.txt  test_models.py
scripts/test_images/: README.md
